# brs-mode-test

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: canon-gaps.md
examples/: april_01.json  april_08.json
src/brs_mode/: __init__.py  cli.py  formatting.py  models.py  parser.py  scoring.py
tests/: test_examples.py  test_scoring.py
