[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brs-mode"
version = "0.1.0"
description = "Deterministic Body Recomposition Scoring scaffold"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Borb Mines" }]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
brs = "brs_mode.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
